--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "oh-vue-icons": "^1.0.0-rc3",
     "tailwindcss": "^4.1.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-typed-js": "^0.1.2"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
